# cv-interactive-me

./: .env  .gitignore  README.md  docker-compose.yaml  package.json
cv_local_rust_server/: Cargo.toml  Rocket.toml
cv_local_rust_server/json/: companies.json  fields.json  jobs.json  jobtypes.json  pm.json  projects.json  teamsizes.json  tech.json
cv_local_rust_server/src/: main.rs
cv_local_rust_server/src/models/: mod.rs
cv_local_rust_server/src/routes/: mod.rs
cv_rust_wasm/: .gitignore  Cargo.toml  Trunk.toml  config.toml  global.css  index.html  mob.css  print.css  styled.css  tailwind-output.css  tmp-styled.css
cv_rust_wasm/src/: Untitled-1.rs  main.rs  routes.rs
cv_rust_wasm/src/api/: actions_api_func.rs  config.rs  mod.rs  static_api_func.rs
cv_rust_wasm/src/components/: appmenu.rs  mod.rs  modals.rs
cv_rust_wasm/src/libstyled/: libstyled.rs  mod.rs
cv_rust_wasm/src/loc_env/: mod.rs
cv_rust_wasm/src/models/: company_model.rs  field_model.rs  job_model.rs  jobtype_model.rs  mod.rs  project_model.rs  tech_model.rs  user_model.rs
cv_rust_wasm/src/screens/: jobs.rs  mod.rs  personal.rs  print.rs  projects.rs
cv_rust_wasm/src/settings/: mod.rs
cv_rust_wasm/src/traits/: can_annotate.rs  can_bookmark.rs  can_filter.rs  load_remote.rs  mod.rs
cv_rust_wasm/src/util/: action_for_resource.rs  cacher.rs  chunker.rs  custom_errors.rs  daterange.rs  filter_utils.rs  find_key_for_predicate.rs  hash_vec_utils.rs  identity.rs  make_model.rs  mod.rs  mod_type.rs  narrowers.rs  parent_resource.rs  resource_for_actions.rs  resource_for_resource.rs  (+8 more)
(+280 files in other folders)
