[package]
name = "cv_jobs_yew"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9"
yew-router = "0.17.0"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12.0"
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = "0.4"
web-sys ={ version =  "0.3.61", features=["Storage"] }
vec-utils = "0.3.0"
log = "0.4.6"
wasm-logger = "0.2.0"
chrono = "0.4.24"
url = "2.3.1"
fixedstr = " 0.2.10"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
settimeout = "0.1.2"
# wasm-timer = "0.2.5"
# gloo-timers = "0.2.6"
yew-hooks="0.2.0"
itertools = "0.11.0"
strum = "0.25.0"
strum_macros = "0.25.0"
# console_error_panic_hook = "0.1.7"
